--- a/registroUsers.html
+++ b/registroUsers.html
@@ -52,7 +52,7 @@
     <div class="header">
         <h1 class="header">Registro de Cliente</h1>
     </div>
-    <form action="https://shisuiidk.github.io/frm/" method="post" enctype="multipart/form-data">
+    <form action="Contactar.html" method="post" enctype="multipart/form-data">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre" required>
 
